hphp/test/zend/good/tests/classes/constants_error_007.php.expectf

Fatal error: Cannot take a reference to a static scope resolution expression in %s/constants_error_007.php on line 10
